Corrected Contact spacing

--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -21,7 +21,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: -210px;
+  margin-top: -190px;
 }
 
 .contact-page {
